[package]
name = "contributron"
version = "0.1.0"
edition = "2024"
description = "Draw pixel art with your GitHub contribution graph"

[dependencies]
chrono = { version = "~0.4", features = ["now"] }
clap = { version = "~4.5", features = ["derive", "error-context", "wrap_help"] }
git2 = "~0.20"
image = "~0.25"
